--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,10 @@ img {
     left: 0px;
     right: 0px;
     bottom: 0px;
-    margin: auto, 0px;
+    margin: auto;
     display: block;
-    max-width: 60%;
+    max-width: 50%;
+    max-width: 40%;
 }
 h3 {
     margin-top: 4px;
